# zhet-blackhole

./: README.md  TEST_RESULTS.txt  pyproject.toml  requirements.txt  run_blackhole.sh
blackhole/app/: __init__.py  main.py  matcher.py  models.py  pack_loader.py  renderer.py  runtime.py  scoring.py  state.py  truth.py
blackhole/compiler/: __init__.py  corpus_to_pack.py
data/: public_cases_manifest.json  public_cases_v1.jsonl  public_cases_v1_plus_secondorder_v4.csv  public_cases_v1_plus_secondorder_v4.jsonl  public_cases_v4_secondorder_README.md  public_cases_v4_secondorder_additions.csv  public_cases_v4_secondorder_additions.jsonl  public_cases_v4_secondorder_manifest.json
examples/: __init__.txt  sample-requests.sh  score-findings.json  starter-pack.yaml
output/: combined-pack-summary.json  combined-pack.yaml  compiled-public-pack-summary.json  compiled-public-pack.yaml
tests/: test_compiler.py  test_runtime.py
